# covid-dashboard

./: README.md  requirements.txt  setup.cfg
covid_dashboard/: __init__.py  config.py  dash.py  log.py  paths.py  run.py  version.py
covid_dashboard/dash_apps/: datos-inc-map.py  datos-inc.py  pred-inc-map.py  pred-inc.py
covid_dashboard/handlers/: base.py
covid_dashboard/static/css/: screen.css
covid_dashboard/templates/: about.html  base.html  incidence.html  mobility.html  navbar.html  predictions.html
deployment/: refresh.sh  setup-cloud.sh
