[metadata]
name = covid-dashboard
summary = This project is the dashboard to see COVID data and predictions.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Ignacio Heredia Cachá
author-email = iheredia@ifca.unican.es

home-page = #todo
project_urls =
    Bug Tracker = #todo

python-requires = >=3.8

license = Apache-2
license_file = LICENSE

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[entry_points]
console_scripts =
    covid-dashboard = covid_dashboard.run:main

oslo.config.opts =
    covid_dashboard = covid_dashboard.opts:list_opts
